Kubernetes/1-kubernetes-resources/11-networkpolicy/1-example/2-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: test-namespace
  labels:
    app: pod1
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: test-namespace
  labels:
    app: pod2
spec:
  containers:
  - name: nginx
    image: nginx
