Kubernetes/1-kubernetes-resources/11-networkpolicy/1-example/3-testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: test-namespace
  labels:
    app: pod3
spec:
  containers:
  - name: nginx
    image: nginx
